--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+14 May 2017 - bear
+    v2.4 release
+    v2.5 bump
+
+    Issue #219 - remove 'setup_requires' from setup.py
+
+10 Mar 2017 - bear
+    v2.3 release
+    v2.4 bump
+
+    Issue #215 - tests fail in March
+
 02 Mar 2016 - bear
     v2.1 released
     v2.2 bump
